--- a/sre.tex
+++ b/sre.tex
@@ -12,16 +12,8 @@
 {Seeking to join a team focusing on product backend, platform, or infrastructure development. I enjoy providing massively distributed, highly available and fault-tolerant services to internal customers and working on every part of it from the metal up.}
 \end{rSection}
 
-%----------------------------------------------------------------------------
-% TECHNICAL STRENGTHS	
-%----------------------------------------------------------------------------
-\begin{rSection}{SKILLS}
+\import{sections}{skills}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Proficient Languages & Scala, Java, Python, C\#, SQL \\
-Learning Languages & Rust, Go \\
-\end{tabular}\\
-\end{rSection}
 
 \begin{rSection}{EXPERIENCE}
 
@@ -43,12 +35,6 @@ Blobstore (Distributed BLOB Storage), Twitter, Inc. \hfill \textit{Seattle, WA}
      \item Migrated multiple services from baremetal to Aurora (Mesos) compute clusters to ease operational burden and to improve development velocity.
      \item Responsible for service monitoring and tooling, system health, system config, load testing, capacity planning and oncall.
  \end{itemize}
-
-\end{rSection} 
-
-%----------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------
 
 \import{sections}{prior_experience}
 \import{sections}{education}
