--- a/dataeng.tex
+++ b/dataeng.tex
@@ -1,11 +1,6 @@
 \documentclass{resume}
-
-\usepackage[left=0.4 in,top=0.4in,right=0.4 in,bottom=0.4in]{geometry}
-\newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
-\newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
-\name{Christopher J. Buresch} 
-\address{Preferred Name: Cj \\ he/him \\ Senior Software Engineer \\ Seattle, WA} 
-\address{\href{mailto:contact@csubj.io}{contact@csubj.io} \\ \href{https://www.linkedin.com/in/csubj}{linkedin/csubj} \\ \href{https://github.com/csubj}{gh/csubj} \\  \href{https://csubj.io}{csubj.io}} 
+\usepackage{import}
+\import{sections/}{intro}
 
 \begin{document}
 
@@ -59,38 +54,7 @@ Dynamics, Microsoft Corporation \hfill \textit{Seattle, WA}
  \end{itemize}
 \end{rSection} 
 
-%----------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------
+\import{sections}{education}
+\import{sections}{extra}
 
-\begin{rSection}{Education}
-    \textbf{Bachelor of Science, Computer Science} \hfill 2011 - 2015 \\ Gonzaga University  \hfill \textit{Spokane, WA} \\ \\
-    {\bf Clubs and Activities} \\
-    \begin{tabular}{ @{} l @{\hspace{6ex}} l }
-    Men's Rowing, Div. 1 \> \textit{2011-12} & ACM ICPC, PNW \> \textit{2012, \textquotesingle13, \textquotesingle14} \\
-    Computer Science Club \> \textit{2012-15} & Math Club \> \textit{2013-15} \\
-    Cycling Club \> \textit{2013-15} & WSU Hackathon \> \textit{2015} \\
-\end{tabular}\\
-
-    \begin{tabbing}
-        \hspace{4cm} \= \hspace{5cm} \= \kill 
-        {\bf Achievements} \\
-        3rd On-Site, ACM ICPC (PNW) \textit{2013}, \textit{2014} \\
-        \end{tabbing}
-\end{rSection}
-%----------------------------------------------------------------------------
-\begin{rSection}{Leadership} 
-    \begin{itemize}
-        \item Mentored 3 new graduate hires and interns. Held bi-weekly or weekly 1:1's to help them ramp up into Twitter Engineering.
-        \item Ambassador for Twitter Seattle 2021-2022. Responsible for planning holiday events, creating opportunities for colleagues to socialize, assisting onsite operations management.
-    \end{itemize}
-\end{rSection}
-%----------------------------------------------------------------------------
-\begin{rSection}{Extra-Curricular Activities} 
-    \begin{itemize}
-        \item Avid Mountain Climber! Summited Mt. Baker, Mt. Shuksan, and Mt. Hood. 
-        \item Avid 3d Printer enthusiast! I model and print practical, or not-so-practical, objects. If you can think it, you can print it!
-    \end{itemize}
-\end{rSection}
 \end{document}
-
