--- a/resume.tex
+++ b/resume.tex
@@ -12,19 +12,9 @@
 {Seeking to join a team focusing on product backend, platform, or infrastructure development. I enjoy providing massively distributed, highly available and fault-tolerant services to internal customers and working on every part of it from the metal up.}
 \end{rSection}
 
-%----------------------------------------------------------------------------
-% TECHNICAL STRENGTHS	
-%----------------------------------------------------------------------------
-\begin{rSection}{SKILLS}
-
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Proficient Languages & Scala, Java, Python, C\#, SQL \\
-Learning Languages & Rust, Go \\
-\end{tabular}\\
-\end{rSection}
-
+\import{sections}{skills}
+    
 \begin{rSection}{EXPERIENCE}
-
 \textbf{Senior Software Engineer} \hfill Sept 2022 - Nov 2022\\
 Blobstore (Distributed BLOB Storage), Twitter, Inc. \hfill \textit{Seattle, WA}
  \begin{itemize}
