--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,19 +1,17 @@
 %----------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------
-
 \begin{rSection}{Education}
-    \textbf{Bachelor of Science, Computer Science} \hfill 2011 - 2015 \\ Gonzaga University  \hfill \textit{Spokane, WA} \\ \\
-    {\bf Clubs and Activities} \\
+    \textbf{Bachelor of Science, Computer Science} \hfill 2011 - 2015 \\ Gonzaga University  \hfill \textit{Spokane, WA} \vspace{0.5em}\\\
+    {\bf Clubs and Activities} \vspace{0.5em}\\
     \begin{tabular}{ @{} l @{\hspace{6ex}} l }
-    Men's Rowing, Div. 1 \> \textit{2011-12} & ACM ICPC, PNW \> \textit{2012, \textquotesingle13, \textquotesingle14} \\
-    Computer Science Club \> \textit{2012-15} & Math Club \> \textit{2013-15} \\
-    Cycling Club \> \textit{2013-15} & WSU Hackathon \> \textit{2015} \\
+    {\hspace{6ex}}Men's Rowing, Div. 1 \> \textit{2011-12} & ACM ICPC, PNW \> \textit{2012, \textquotesingle13, \textquotesingle14} \\
+    {\hspace{6ex}}Computer Science Club \> \textit{2012-15} & Math Club \> \textit{2013-15} \\
+    {\hspace{6ex}}Cycling Club \> \textit{2013-15} & WSU Hackathon \> \textit{2015} \\
 \end{tabular}\\
-
     \begin{tabbing}
         \hspace{4cm} \= \hspace{5cm} \= \kill 
-        {\bf Achievements} \\
-        3rd On-Site, ACM ICPC (PNW) \textit{2013}, \textit{2014} \\
+        {\bf Achievements} \vspace{0.5em}\\
+        {\hspace{6ex}}3rd On-Site, ACM ICPC (PNW) \textit{2013}, \textit{2014} \\
         \end{tabbing}
 \end{rSection}
