--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,8 +1,8 @@
 %----------------------------------------------------------------------------
 \begin{rSection}{Leadership} 
     \begin{itemize}
-        \item Mentored 3 new graduate hires and interns. Held bi-weekly or weekly 1:1's to help them ramp up into Twitter Engineering.
-        \item Ambassador for Twitter Seattle 2021-2022. Responsible for planning holiday events, creating opportunities for colleagues to socialize, assisting onsite operations management.
+        \item Mentored new grads and interns with weekly 1:1's and adhoc sessions to help them ramp up into Twitter Engineering!
+        \item Ambassador for Twitter Seattle 2021-2022. Responsible for planning events, creating opportunities for colleagues to socialize, assisting onsite operations management.
     \end{itemize}
 \end{rSection}
 %----------------------------------------------------------------------------
