--- a/sections/prior_experience.tex
+++ b/sections/prior_experience.tex
@@ -1,7 +1,20 @@
-\textbf{Microsoft Corporation - Software Engineer} \hfill Aug 2015 - Nov 2018\\
-Dynamics,  \hfill \textit{Seattle, WA}
+\begin{rSection}{EXPERIENCE}
+\textbf{Twitter, Inc. - Senior Software Engineer} \hfill Dec 2018 - Nov 2022\\
+Blobstore (Distributed Object Storage),\hfill \textit{Seattle, WA}  \vspace{1em} \\
+As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes as well as producing feature work.
+\vspace{0.5em}\\
+{\bf Selected Accomplishments}
  \begin{itemize}
     \itemsep -3pt {} 
-     \item Part of a Switzerland-based infrastructure team providing a t that was integrated into Dynamics. Managed multiple Elasticsearch clusters, wrote and maintained operation tooling.
+     \item Designed and implemented chargeback automation to give customers far more granular resource cost across storage class, data locality and replication factor. 
+     \item Developed anti-entropy services and tooling to process large metadata dumps to multi-step 
+     \item Developed a topology-aware locking service to ensure operation actors could operate independently without affecting service health. This presented other opportunities we were able to exploit like no-touch automated deployments and hardware lifecycle automation.
+     \item Wrote compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention and negligible service interruption. 
+     \item Migrated multiple services from baremetal to Aurora Mesos compute clusters to ease operational burden and to improve developer velocity.
+     \item Handled service monitoring and tooling, system health, system config, loadtesting, capacity planning and oncall.
  \end{itemize}
+\vspace{1em}
+\textbf{Microsoft Corporation - Software Engineer} \hfill Aug 2015 - Nov 2018\\
+Dynamics  \hfill \textit{Seattle, WA} \vspace{1em} \\
+Worked remote to a small Switzerland-based follow-the-sun cloud infrastructure team tasked with managing the operational health of a Microsoft Social Engagement product's backend. Later switched to a backend product team developing an account management api for Dynamics CRM.\vspace{0.5em}
 \end{rSection} 
