--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,7 +1,8 @@
 \begin{rSection}{SKILLS}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-    Proficient Languages: & Scala, Java, Python, C\#, SQL \\
-    Relevant Experience: & MapReduce, Airflow, Hadoop, Docker, K8s  \\
+    Proficient Languages: & Scala, Java, Python, C\# \vspace{0.5em}\\
+    Relevant Experience: & Scalding / Hadoop MapReduce, HDFS, Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
+    gRPC/thrift/protobuf, Bazel, Puppet, Terraform \vspace{0.5em}\\
     Learning Languages: & Rust, Go \\
     \end{tabular}\\
 \end{rSection}
