--- a/sre.tex
+++ b/sre.tex
@@ -9,7 +9,7 @@
 %----------------------------------------------------------------------------
 
 \begin{rSection}{OBJECTIVE}
-{Seeking to join a team focusing on product backend, platform, or infrastructure development. I enjoy providing massively distributed, highly available and fault-tolerant services to internal customers and working on every part of it from the metal up.}
+{With my experience in massively distributed}
 \end{rSection}
 
 \import{sections}{skills}
@@ -19,6 +19,8 @@
 
 \textbf{Senior Software Engineer} \hfill Sept 2022 - Nov 2022\\
 Blobstore (Distributed BLOB Storage), Twitter, Inc. \hfill \textit{Seattle, WA}
+
+Selected Accomplisments: 
  \begin{itemize}
     \itemsep -3pt {} 
      \item Designed and implemented a new chargeback model and service for Blobstore which gave customers a more granular and accurate understanding of their app use-case over time. 
