--- a/swe.tex
+++ b/swe.tex
@@ -9,29 +9,13 @@
 %----------------------------------------------------------------------------
 
 \begin{rSection}{OBJECTIVE}
-{Seeking to join a team focusing on product backend, platform, or infrastructure development. I enjoy providing massively distributed, highly available and fault-tolerant services to internal customers and working on every part of it from the metal up.}
+{Experienced software engineer with a focus on storage and distributed systems. Expert in designing and implementing scalable solutions for handling large amounts of data. Committed to delivering high-performing and reliable systems, utilizing a strong understanding of storage architectures and distributed computing concepts.}
 \end{rSection}
 
+
 \import{sections}{skills}
-
-
-\begin{rSection}{EXPERIENCE}
-
-\textbf{Twitter, Inc. - Senior Software Engineer} \hfill Dec 2018 - Nov 2022\\
-Blobstore (Distributed Storage),\hfill \textit{Seattle, WA}
- \begin{itemize}
-    \itemsep -3pt {} 
-     \item Designed and implemented a new chargeback model and service for Blobstore which gave customers a more granular and accurate understanding of their app use-case over time. 
-     \item Wrote a new compliance service which would cut user access or delete out-of-compliance datasets based on signals from the InfoSec or Legal team. 
-     \item Maintained anti-entropy services and tooling, processed large datasets in multi-step pipelines to handle 
-     \item Designed and built a topology-aware cluster locking service to ensure automation and deploys could operate in parallel without affecting service health. This unlocked other opportunities like automated deployments, which increased release cadence from monthly to weekly.
-     \item Wrote compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention. 
-     \item Migrated multiple services from baremetal to Aurora (Mesos) compute clusters to ease operational burden and to improve development velocity.
-     \item Responsible for service monitoring and tooling, system health, system config, load testing, capacity planning and oncall.
- \end{itemize}
-
-
 \import{sections}{prior_experience}
+\newpage
 \import{sections}{education}
 \import{sections}{extra}
 \end{document}
