--- a/sections/prior_experience.tex
+++ b/sections/prior_experience.tex
@@ -1,16 +1,16 @@
 \begin{rSection}{EXPERIENCE}
 \textbf{Twitter, Inc. - Senior Software Engineer} \hfill Dec 2018 - Nov 2022\\
 Blobstore (Distributed Object Storage),\hfill \textit{Seattle, WA}  \vspace{1em} \\
-As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes as well as producing feature work.
-\vspace{0.5em}\\
+As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem mutli-tenant multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes as well as producing feature work.
+\vspace{1em}\\
 {\bf Selected Accomplishments}
  \begin{itemize}
     \itemsep -3pt {} 
-     \item Designed and implemented chargeback automation to give customers far more granular resource cost across storage class, data locality and replication factor. 
-     \item Developed anti-entropy services and tooling to process large metadata dumps to multi-step 
-     \item Developed a topology-aware locking service to ensure operation actors could operate independently without affecting service health. This presented other opportunities we were able to exploit like no-touch automated deployments and hardware lifecycle automation.
-     \item Wrote compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention and negligible service interruption. 
-     \item Migrated multiple services from baremetal to Aurora Mesos compute clusters to ease operational burden and to improve developer velocity.
+     \item Developed a chargeback model and automation to give customers daily resource cost across storage class, data locality and replication factor. 
+     \item Developed a topology-aware locking service to ensure operation actors could operate independently without affecting service health. This presented other opportunities we were able to exploit like no-touch automated deployments and hardware lifecycle automation that removed developer weeks of operation toil and increased deployments from monthly to weekly. 
+     \item Wrote compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention and negligible service impact. 
+     \item Developed anti-entropy services and tooling to process large metadata dumps (billions of keys) to multi-instance workers to ensure data integrity. 
+     \item Migrated multiple services from baremetal to Aurora Mesos compute clusters to ease operational burden and to improve developer velocity and service reliability.
      \item Handled service monitoring and tooling, system health, system config, loadtesting, capacity planning and oncall.
  \end{itemize}
 \vspace{1em}
