--- a/swe.tex
+++ b/swe.tex
@@ -9,7 +9,7 @@
 %----------------------------------------------------------------------------
 
 \begin{rSection}{OBJECTIVE}
-{Experienced software engineer with a focus on storage and distributed systems. Expert in designing and implementing scalable solutions for handling large amounts of data. Committed to delivering high-performing and reliable systems, utilizing a strong understanding of storage architectures and distributed computing concepts.}
+{Experienced software engineer with a focus on storage, distributed platform and infrastructure systems. Excited to design and implement scalable solutions for handling large amounts of data with commitment to delivering high-performing and reliable services. Ideally my next role would have leadership opportunities in the IC route.}
 \end{rSection}
 
 
