--- a/sections/prior_experience.tex
+++ b/sections/prior_experience.tex
@@ -1,7 +1,7 @@
 \begin{rSection}{EXPERIENCE}
 \textbf{Twitter, Inc. - Senior Software Engineer} \hfill Dec 2018 - Nov 2022\\
 Blobstore (Distributed Object Storage),\hfill \textit{Seattle, WA}  \vspace{1em} \\
-As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem mutli-tenant multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes as well as producing feature work.
+As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem multi-tenant multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes as well as producing feature work.
 \vspace{1em}\\
 {\bf Selected Accomplishments}
  \begin{itemize}
