--- a/sections/prior_experience.tex
+++ b/sections/prior_experience.tex
@@ -1,20 +1,20 @@
 \begin{rSection}{EXPERIENCE}
 \textbf{Twitter, Inc. - Senior Software Engineer} \hfill Dec 2018 - Nov 2022\\
 Blobstore (Distributed Object Storage),\hfill \textit{Seattle, WA}  \vspace{1em} \\
-As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem multi-tenant multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes as well as producing feature work.
+As a team of 8 we stored 70PB of Twitter's public and private data in an on-prem multi-tenant multi-datacenter distributed key-value system. During my time on the team I owned the hardware health, all service automation, monitoring, tooling and deployments as well as custodial services and processes along with feature work.
 \vspace{1em}\\
 {\bf Selected Accomplishments}
  \begin{itemize}
     \itemsep -3pt {} 
-     \item Developed a chargeback model and automation to give customers daily resource cost across storage class, data locality and replication factor. 
-     \item Developed a topology-aware locking service to ensure operation actors could operate independently without affecting service health. This presented other opportunities we were able to exploit like no-touch automated deployments and hardware lifecycle automation that removed developer weeks of operation toil and increased deployments from monthly to weekly. 
-     \item Wrote compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention and negligible service impact. 
+     \item Developed a chargeback model and automation to give customers daily resource cost across network and api usage, storage class, data locality and replication factor. This was an approvement over the previous manual process which only accounted for storage on disk on a quarterly interval. 
+     \item Developed a topology-aware locking service to ensure operational actors could operate independently safely without affecting service health. This presented opportunities like no-touch deployments and hardware lifecycle automation that removed weeks of developer operation toil, reduced pages by a magnitude, and increased deployments from monthly to weekly for our stateful backend. 
+     \item Developed compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention and negligible service impact. As a result Blobstore was consistently in the top 5 of patched fleets across the company. 
      \item Developed anti-entropy services and tooling to process large metadata dumps (billions of keys) to multi-instance workers to ensure data integrity. 
-     \item Migrated multiple services from baremetal to Aurora Mesos compute clusters to ease operational burden and to improve developer velocity and service reliability.
-     \item Handled service monitoring and tooling, system health, system config, loadtesting, capacity planning and oncall.
+     \item Migrated multiple services from baremetal to Aurora Mesos compute clusters to ease operational burden, improve developer velocity and service reliability as well as cut 6-figures from annual COGS.
+     \item Maintained service monitoring and tooling, system health, system config, loadtesting, capacity planning and oncall.
  \end{itemize}
 \vspace{1em}
 \textbf{Microsoft Corporation - Software Engineer} \hfill Aug 2015 - Nov 2018\\
 Dynamics  \hfill \textit{Seattle, WA} \vspace{1em} \\
-Worked remote to a small Switzerland-based follow-the-sun cloud infrastructure team tasked with managing the operational health of a Microsoft Social Engagement product's backend. Later switched to a backend product team developing an account management api for Dynamics CRM.\vspace{0.5em}
+Worked remote to a small Switzerland-based follow-the-sun cloud infrastructure team tasked with managing the operational health of a Microsoft Social Engagement product's backend and various Elasticsearch clusters. Later switched to a backend product team developing an account management api for Dynamics CRM.\vspace{0.5em}
 \end{rSection} 
