update, add some pretty elements

--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,16 +1,17 @@
 %----------------------------------------------------------------------------
 \begin{rSection}{Leadership} 
     \begin{itemize}
-        \item Mentored new grads and interns with weekly 1:1's and adhoc sessions to help them ramp up into Twitter Engineering!
-        \item Ambassador for Twitter Seattle 2021-2022. Responsible for planning events, creating opportunities for colleagues to socialize, assisting onsite operations management.
+        \item Mentored several cohorts of new grads and interns with weekly 1:1's and adhoc sessions to help them ramp up into Twitter Engineering!
+        \item Ambassador for Twitter Seattle 2021-2022. Responsible for planning events, creating opportunities for colleagues to socialize in a hybrid environment, as well as assisting onsite operations management.
     \end{itemize}
 \end{rSection}
 %----------------------------------------------------------------------------
 \begin{rSection}{Extra-Curricular Activities} 
     \begin{itemize}
-        \item Avid Mountain Climber! Summited Mt. Baker, Mt. Shuksan, and Mt. Hood. 
+        \item A recent greenthumb, DIY'ing the garden and working on sustainable bee-friendly landscaping. 
+        \item Avid mountain climber and adventure traveler! Summited Mt. Baker, Mt. Shuksan, and Mt. Hood; hiked the Salkantay Trail in Peru!
         \item 3d Printing enthusiast! I solve my everyday problems with plastic.
-        \item I play tabletop, RPG and video games! 
+        \item Ask about my D\&D campaign (if you dare lol)!
     \end{itemize}
 \end{rSection}
 
