--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -2,5 +2,5 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Christopher J. Buresch} 
-\address{Preferred Name: Cj \\ he/him \\ Senior Software Engineer \\ Seattle, WA} 
-\address{\href{mailto:contact@csubj.io}{contact@csubj.io} \\ \href{https://www.linkedin.com/in/csubj}{linkedin/csubj} \\ \href{https://github.com/csubj}{gh/csubj} \\  \href{https://csubj.io}{csubj.io}} 
+\address{Preferred Name: Cj \\ he/him \\ Seattle, WA} 
+\address{\href{mailto:cj@csubj.io}{cj@csubj.io} \\ \href{https://www.linkedin.com/in/csubj}{Li/csubj} \\ \href{https://github.com/csubj}{gh/csubj} \\  \href{https://csubj.io}{csubj.io}} 
