--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,8 +1,9 @@
 \begin{rSection}{SKILLS}
-    \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-    Proficient Languages: & Scala, Java, Python, C\# \vspace{0.5em}\\
-    Relevant Experience: & Scalding / Hadoop MapReduce, HDFS, Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
-    gRPC/thrift/protobuf, Bazel, Puppet, Terraform \vspace{0.5em}\\
-    Learning Languages: & Rust, Go \\
-    \end{tabular}\\
+    \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1ex}} l }
+    Primary Languages: & Scala, Python \vspace{0.1em}\\
+    Previous Experience: &  C\#, Java, R \vspace{0.1em}\\
+    Learning Langs: & Typescript, Rust, Go \vspace{0.1em}\\
+    Relevant Technologies: & Scalding (MapReduce), Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
+    gRPC/thrift, Bazel, Puppet, Terraform \vspace{0.1em}\\
+    \end{tabular}
 \end{rSection}
