--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,10 @@
 \documentclass{resume}
 \usepackage{import}
+\usepackage{mdframed}
+\usepackage{xcolor}
+
 \import{sections/}{intro}
+
 
 \begin{document}
 
@@ -9,38 +13,13 @@
 %----------------------------------------------------------------------------
 
 \begin{rSection}{OBJECTIVE}
-{Seeking to join a team focusing on product backend, platform, or infrastructure development. I enjoy providing massively distributed, highly available and fault-tolerant services to internal customers and working on every part of it from the metal up.}
+{With almost 10 years in platform/backend SWE and SRE roles at the world's largest consumer and social software companies I've honed a broad and eclectic skillset owning physical and cloud infrastructure, developing automation for and supporting massive distributed storage services. As a recent startup founder and experienced engineer I'm excited for opportunities to develop in new domains and continue following my passion for reliable engineering in my next role developing fault tolerant web-scale software.}
 \end{rSection}
 
+
+\import{sections}{experience}
+\newpage
 \import{sections}{skills}
-    
-\begin{rSection}{EXPERIENCE}
-\textbf{Senior Software Engineer} \hfill Sept 2022 - Nov 2022\\
-Blobstore (Distributed BLOB Storage), Twitter, Inc. \hfill \textit{Seattle, WA}
- \begin{itemize}
-    \itemsep -3pt {} 
-     \item Designed and implemented a new chargeback model and service for Blobstore which gave customers a more granular and accurate understanding of their app use-case over time. 
-     \item Wrote a new compliance service which would cut user access or delete out-of-compliance datasets based on signals from the InfoSec or Legal team. 
-     \item Maintained anti-entropy services and tooling, processed large datasets in multi-step pipelines to handle 
- \end{itemize}
-
- \textbf{ Site Reliability Engineer II --- Software Engineer II} \hfill Dec 2018 - Sept 2022 \\
-Blobstore (Distributed BLOB Storage), Twitter, Inc. \hfill \textit{Seattle, WA}
- \begin{itemize}
-    \itemsep -3pt {} 
-     \item Designed and built a topology-aware cluster locking service to ensure automation and deploys could operate in parallel without affecting service health. This unlocked other opportunities like automated deployments, which increased release cadence from monthly to weekly.
-     \item Wrote compliance automation for kernel and firmware updates using Airflow as an orchestration engine. Rolls 8k machines across multiple datacenters in less than 30 days with no manual intervention. 
-     \item Migrated multiple services from baremetal to Aurora (Mesos) compute clusters to ease operational burden and to improve development velocity.
-     \item Responsible for service monitoring and tooling, system health, system config, load testing, capacity planning and oncall.
- \end{itemize}
-
-\end{rSection} 
-
-%----------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------
-
-\import{sections}{prior_experience}
 \import{sections}{education}
 \import{sections}{extra}
 \end{document}
