updating the ol' CV

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,7 +1,13 @@
 
 
 \begin{rSection}{EXPERIENCE}
-    
+\begin{mdframed}[linewidth=2,linecolor=blue, innertopmargin=1em, innerbottommargin=1em, topline=false, rightline=false, bottomline=false]
+\textbf{Senior Software Engineer} \hfill July 2023 - Present\\
+Zillow Group, Inc. \hfill \textit{Seattle, WA}
+
+Embedded with Data Platform tackling large infrastructure, platform, and DevOp problems. 
+\end{mdframed}
+
 \begin{mdframed}[linewidth=2,linecolor=red, innertopmargin=1em, innerbottommargin=1em, topline=false, rightline=false, bottomline=false]
 \textbf{Founder} \hfill April 2023 - Present\\
 hcf labs LLC \hfill \textit{Seattle, WA}
