--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,9 +1,8 @@
 \begin{rSection}{SKILLS}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1ex}} l }
-    Primary Languages: & Scala, Python \vspace{0.1em}\\
+    Primary Languages: & Go, Python, Scala, Typescript \vspace{0.1em}\\
     Previous Experience: &  C\#, Java, R \vspace{0.1em}\\
-    Learning Langs: & Typescript, Rust, Go \vspace{0.1em}\\
     Relevant Technologies: & Scalding (MapReduce), Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
-    gRPC/thrift, Bazel, Puppet, Terraform \vspace{0.1em}\\
+    gRPC/thrift, Bazel, Terraform \vspace{0.1em}\\
     \end{tabular}
 \end{rSection}
