--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,6 +1,7 @@
 \usepackage[left=0.4 in,top=0.4in,right=0.4 in,bottom=0.4in]{geometry}
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
-\name{Christopher J. Buresch} 
-\address{Preferred Name: Cj \\ he/him \\ Seattle, WA} 
-\address{\href{mailto:cj@csubj.io}{cj@csubj.io} \\ \href{https://www.linkedin.com/in/csubj}{Li/csubj} \\ \href{https://github.com/csubj}{gh/csubj} \\  \href{https://csubj.io}{csubj.io}} 
+\name{Cj Buresch} 
+\nameaddition{\href{mailto:cj@csubj.io}{cj@csubj.io} \\ \href{https://www.linkedin.com/in/csubj}{linkedin/csubj} \\ \href{https://github.com/csubj}{github/csubj}}
+\address{Senior Software Engineer \\ Infrastructure, Storage, Compute}
+\address{he/him \\ Seattle, WA}
