--- a/resume.tex
+++ b/resume.tex
@@ -4,21 +4,14 @@
 \usepackage{xcolor}
 
 \import{sections/}{intro}
-
-
 \begin{document}
 
 %----------------------------------------------------------------------------
 %	OBJECTIVE
 %----------------------------------------------------------------------------
 
-\begin{rSection}{OBJECTIVE}
-{With almost 10 years in platform/backend SWE and SRE roles at the world's largest consumer and social software companies I've honed a broad and eclectic skillset owning physical and cloud infrastructure, developing automation for and supporting massive distributed storage services. As a recent startup founder and experienced engineer I'm excited for opportunities to develop in new domains and continue following my passion for reliable engineering in my next role developing fault tolerant web-scale software.}
-\end{rSection}
-
-
+\import{sections}{Skills}
 \import{sections}{experience}
-\import{sections}{skills}
 \import{sections}{education}
 \import{sections}{extra}
 \end{document}
