--- a/sections/education.tex
+++ b/sections/education.tex
@@ -2,16 +2,11 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------
 \begin{rSection}{Education}
-    \textbf{Bachelor of Science, Computer Science} \hfill 2011 - 2015 \\ Gonzaga University  \hfill \textit{Spokane, WA} \vspace{0.5em}\\\
+    \textbf{Bachelor of Science, Computer Science} \\ Gonzaga University, Spokane WA  \hfill \vspace{0.5em}\\\
     {\bf Clubs and Activities} \vspace{0.5em}\\
     \begin{tabular}{ @{} l @{\hspace{6ex}} l }
-    {\hspace{6ex}}Men's Rowing, Div. 1 \> \textit{2011-12} & ACM ICPC, PNW \> \textit{2012, \textquotesingle13, \textquotesingle14} \\
-    {\hspace{6ex}}Computer Science Club \> \textit{2012-15} & Math Club \> \textit{2013-15} \\
-    {\hspace{6ex}}Cycling Club \> \textit{2013-15} & WSU Hackathon \> \textit{2015} \\
+    {\hspace{6ex}}Computer Science Club \>  & ACM ICPC, PNW \> 3rd On-Site two years running \\
+    {\hspace{6ex}} Men's Rowing, Div. 1 \>  & Math Club \>  \\
+    {\hspace{6ex}}Cycling Club \>  & WSU Hackathon \> \\
 \end{tabular}\\
-    \begin{tabbing}
-        \hspace{4cm} \= \hspace{5cm} \= \kill 
-        {\bf Achievements} \vspace{0.5em}\\
-        {\hspace{6ex}}3rd On-Site, ACM ICPC (PNW) \textit{2013}, \textit{2014} \\
-        \end{tabbing}
 \end{rSection}
