--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,6 +1,6 @@
 
 
-\begin{rSection}{EXPERIENCE}
+\begin{rSection}{Experience}
 \import{experience/}{zillow}
 \import{experience/}{hcf}
 \import{experience/}{twitter}
