--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,8 +1,7 @@
-\begin{rSection}{SKILLS}
+\begin{rSection}{Skills}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1ex}} l }
-    Primary Languages: & Go, Python, Scala, Typescript \vspace{0.1em}\\
-    Previous Experience: &  C\#, Java, R \vspace{0.1em}\\
+    Languages: & Go, Python, Scala, Typescript \vspace{0.1em}\\
     Relevant Technologies: & Scalding (MapReduce), Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
-    gRPC/thrift, Bazel, Terraform \vspace{0.1em}\\
+    gRPC, Bazel, Terraform \vspace{0.1em}\\
     \end{tabular}
 \end{rSection}
