--- a/sections/experience/hcf.tex
+++ b/sections/experience/hcf.tex
@@ -2,5 +2,5 @@
     \textbf{Founder} \hfill April 2023 - Present\\
     hcf labs LLC \hfill \textit{Seattle, WA}
     
-    Early stage startup developing consumer apps. TechStack: Go/Python with Bazel, PostgreSQL, AWS, Typescript + NextJS, Terraform.
+    Early stage startup developing SaaS apps.
 \end{mdframed}
