--- a/sections/experience/twitter.tex
+++ b/sections/experience/twitter.tex
@@ -2,7 +2,7 @@
     \textbf{Senior Software Engineer} \hfill Dec 2018 - Nov 2022\\
     Twitter, Inc. - Blobstore (Distributed KV Object Storage)\hfill \textit{Seattle, WA}
 
-    As a team of 9, we served over 70PB at 100M requests per day of user data in an on-prem, multi-datacenter, eventually consistent distributed system developed in-house. As the infrastructure lead, I oversaw ~8,000 physical machines, compliance and chargeback reporting, hardware provisioning and automation, observability, tooling, deployments, anti-entropy services, and delivered service features.
+    As a team of nine, we managed over 70PB of user data, handling 100 million requests per day in an on-premises, multi-datacenter, eventually consistent distributed system developed in-house. As the infrastructure lead, I oversaw approximately 8,000 physical machines, managed compliance and chargeback reporting, hardware provisioning and automation, observability, tooling, deployments, anti-entropy services, and delivered critical service features.
     
     {\bf Accomplishments}
      \begin{itemize}
