--- a/sections/experience/zillow.tex
+++ b/sections/experience/zillow.tex
@@ -2,10 +2,10 @@
 \textbf{Senior Software Engineer} \hfill July 2023 - Present\\
 Zillow Group, Inc. \hfill \textit{Seattle, WA}
 
-Developing a self-service compute platform for 300+ engineers. In a team of 3 we own observability, deployment pipelines, tooling and automatiom, cloud infrastructure and networking for our client teams. 
+Leading the transformation of Zillow’s MLS data and product DevOps team into a self-service compute platform for >200 engineers. Our team of three owns and manages the cloud infrastructure, networking, observability, pipelines, tooling, and automation that empowers our customer teams with seamless operations.
 \begin{itemize}
-    \item King County Search and Rescue Team member since 2024! "So that others may live..." 
-    \item Avid mountain climber and adventure traveler! Summited Mt. Baker, Mt. Shuksan, and Mt. Hood; hiked the Salkantay Trail in Peru!
-    \item 3d Printing enthusiast! I solve my everyday problems with plastic.
+    \item Set clear team goals, roadmap and milestones for 6 months to 1 year with deadlines and accountability owners. Defined the on-call policy, the service and project design process (lightweight RFC), rewrote and improved internal and customer onboarding documentation.
+    \item Developed pipeline tooling to improve the reliability and UX of writing and deploying services; implemented post-apply feedback mechanisms for customers to easily debug failing deployments without our intervention.
+    \item Consolidated many disparate repos into fewer purpose built monorepos  (services and tooling, infrastructure, tenant resources) making development and dependency maintenance faster and easier.
 \end{itemize}
 \end{mdframed}
