--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,7 +1,6 @@
-
-
 \begin{rSection}{Experience}
 \import{experience/}{zillow}
-\import{experience/}{hcf}
+% \import{experience/}{hcf}
 \import{experience/}{twitter}
+\import{experience}{microsoft}
 \end{rSection}
