--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,7 +1,7 @@
 \begin{rSection}{Skills}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1ex}} l }
     Languages: & Go, Python, Scala, Typescript \vspace{0.1em}\\
-    Relevant Technologies: & Scalding (MapReduce), Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
-    gRPC, Bazel, Terraform \vspace{0.1em}\\
+    Relevant Technologies: & Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
+    Bazel, Terraform \vspace{0.1em}\\
     \end{tabular}
 \end{rSection}
