--- a/sections/experience/microsoft.tex
+++ b/sections/experience/microsoft.tex
@@ -1,5 +1,10 @@
 \begin{mdframed}[linewidth=2,linecolor=green, innertopmargin=1em, innerbottommargin=0em, topline=false, rightline=false, bottomline=false]
     \textbf{Software Engineer} \hfill Aug 2015 - Nov 2018\\
     Microsoft Corporation - Dynamics 365 \hfill \textit{Seattle, WA} \vspace{1em} \\
-    Worked remote to a Switzerland-based infrastructure team that developed Microsoft Social Engagement (a social media sentiment analysis) product's backend and massive Elasticsearch clusters. Owned livesite operations, infrastructure automation, observability,  Later re-org'd to a backend product team developing an account management api for Dynamics CRM.\vspace{0.5em}
+    Worked remote to a Switzerland-based infrastructure team that developed Microsoft Social Engagement (a social media sentiment analysis) product's backend and large Elasticsearch clusters. Later moved to a backend product team developing the account management api for Dynamics CRM. 
+    \begin{itemize}
+        \itemsep -5pt {} 
+        \item Owned infrastructure and agent tooling for the product. 
+        \item Owned livesite operations, infrastructure automation, observability for the product. 
+     \end{itemize}
     \end{mdframed}
