--- a/sections/experience/zillow.tex
+++ b/sections/experience/zillow.tex
@@ -2,10 +2,10 @@
 \textbf{Senior Software Engineer} \hfill July 2023 - Present\\
 Zillow Group, Inc. \hfill \textit{Seattle, WA}
 
-Leading the transformation of Zillow’s MLS data and product DevOps team into a self-service compute platform for >200 engineers. Our team of three owns and manages the cloud infrastructure, networking, observability, pipelines, tooling, and automation that empowers our customer teams with seamless operations.
+Leading the transformation of Zillow’s MLS data and product DevOps team into a self-service compute platform for >200 engineers. Our team of three owns and manages the cloud infrastructure, networking, observability, CICD, tooling, and automation that empowers our product teams with seamless operations.
 \begin{itemize}
-    \item Set clear team goals, roadmap and milestones for 6 months to 1 year with deadlines and accountability owners. Defined the on-call policy, the service and project design process (lightweight RFC), rewrote and improved internal and customer onboarding documentation.
-    \item Developed pipeline tooling to improve the reliability and UX of writing and deploying services; implemented post-apply feedback mechanisms for customers to easily debug failing deployments without our intervention.
-    \item Consolidated many disparate repos into fewer purpose built monorepos  (services and tooling, infrastructure, tenant resources) making development and dependency maintenance faster and easier.
+    \item Developed the 1 year roadmap to align with company and org leadership needs while also addressing tech debt priorities. Defined the on-call, tenant support, and engagement policies; created a design process (lightweight RFC), rewrote and improved internal onboarding documentation.
+    \item Created tooling to deploy services that reduced bad kubernetes deployments due to configuration errors by 20\%, which also gives post-apply feedback for tenants to easily debug without intervention.
+    \item Rewrote EKS cluster definitions and cluster bootstrap process, added functionality to allow for ephemeral compute and easier A/B testing with our kubernetes stack and faster iteration on platform changes, disaster recovery and kubernetes version upgrades.
 \end{itemize}
 \end{mdframed}
