--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -3,5 +3,5 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Cj Buresch}
 \contactinfo{\href{mailto:cj@csubj.io}{cj@csubj.io} \\ \href{https://www.linkedin.com/in/csubj}{linkedin/csubj} \\ \href{https://github.com/csubj}{github/csubj}}
-\jobtitle{Senior Software Engineer \\ Platform, Storage, Infrastructure }
+\jobtitle{Senior Software Engineer, SRE \\ Platform, Storage, Infrastructure }
 \identityinfo{he/him \\ Seattle, WA}
